refactor: Java 25 modernization for logging tables, procletService state, stateless elements
- YLogServer, YLogDataItemInstance, YLogDataType: var locals, diamond inference, String API
- Performatives: StringBuilder, String.join, isBlank(), switch expressions
- stateless/YAWLServiceGateway, YEnabledTransitionSet, YExternalNetElement: pattern matching,
  var locals, diamond inference, collection factory methods

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF